fixed config security